<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WorldCup Remind</string>
    <string name="menu_update">UPDATE</string>
    <string name="menu_about">ABOUT</string>
    <string name="menu_remind">SET REMIND</string>
   	<string name="menu_remind_enable">REMIND ENABLE</string>
	<string name="menu_remind_disable">REMIND DISABLE</string>
    <string name="menu_confirm">CONFIRM</string>
    <string name="menu_cancel">CANCEL</string>
	<string name="menu_second">SECOND STAGE</string>
    <string name="menu_reset">RESET</string>
    <string name="menu_goal">GOAL</string>
	<string name="menu_assist">ASSIST</string>
	<string name="menu_refresh">REFRESH</string>
	<string name="menu_app">OTHER APP</string>
	<string name="menu_update_server">"SET SERVER"</string>
    <string name="tab_mathces">MATCHES</string>
    <string name="tab_group">GROUP</string>
    <string name="tab_statistics">STATISTICS</string>
    <string name="tab_news">NEWS</string>
    <string name="app_exit">PRESS AGAIN TO EXIT.</string>
    <string name="data_fail">FAIL TO PARSE THE DATA</string>
    <string name="data_fail_message">FAIL TO PARSE THE DATA！PLEASE SELECT[RESET DATA] OR [UPDATE] IN MENU AND REBOOT APP!</string>

    <!-- National Name -->
    <string name="bra">"Brazil"</string>
    <string name="cro">"Croatia"</string>
    <string name="mex">"Mexico"</string>
    <string name="cmr">"Cameroon"</string>
    <string name="esp">"Spain"</string>
    <string name="ned">"Netherlands"</string>
    <string name="chi">"Chile"</string>
    <string name="aus">"Australia"</string>
    <string name="col">"Columbia"</string>
    <string name="gre">"Greece"</string>
    <string name="civ">"Ivory Coast"</string>
    <string name="jpn">"Japan"</string>
    <string name="uru">"Uruguay"</string>
    <string name="crc">"Costa Rica"</string>
    <string name="eng">"England"</string>
    <string name="ita">"Italy"</string>
    <string name="sui">"Switzerland"</string>
    <string name="ecu">"Ecuador"</string>
    <string name="fra">"France"</string>
    <string name="hon">"Honduras"</string>
    <string name="arg">"Argentina"</string>
    <string name="bih">"Bosnia and Herzegovina"</string>
    <string name="irn">"Iran"</string>
    <string name="nga">"Nigeria"</string>
    <string name="ger">"Germany"</string>
    <string name="por">"Portugal"</string>
    <string name="gha">"Ghana"</string>
    <string name="usa">"America"</string>
    <string name="bel">"Belgium"</string>
    <string name="alg">"Algeria"</string>
    <string name="rus">"Russia"</string>
    <string name="kor">"Korea"</string>

    <!-- Match Info -->
    <string name="str_stage_group">"GROUP &#037;s"</string>
    <string name="str_stage_16">"EIGHTH"</string>
    <string name="str_stage_8">"SEMI"</string>
    <string name="str_stage_4">"QUARTER"</string>
    <string name="str_stage_2">"FINAL"</string>
	<string name="str_stage_1">"FINAL"</string>
	<string name="str_info_news">"MATCH NEWS"</string>
	<string name="str_info_video">"MATCH VIDEO"</string>
	<string name="str_info_live">"MATCH LIVE"</string>
	<string name="str_info_match">"MATCH INFO"</string>
	<string name="str_viedo_alert_title">"DATA USAGE"</string>
	<string name="str_viedo_alert_message">"TO PLAY THIS VIDEO WILL CONSUME YOU DATA USAGE，CONTINUE？"</string>
	<string name="str_viedo_checkbox">"NOT TO REMIND</string>
	<string name="str_viedo_button">"CONTINUE"</string>

    <!-- Group Info -->
    <string name="str_group_win">W</string>
	<string name="str_group_draw">D</string>
	<string name="str_group_lose">L</string>
	<string name="str_group_gf">GF</string>
	<string name="str_group_ga">GA</string>
	<string name="str_group_pts">MP</string>
	<string name="str_secondstage_full">FULL SCREEN</string>
	<string name="str_secondstage_fail">FAIL TO LOAD THE SECOND STAGE MATCHES IMAGE</string>
	
	<!-- Statistics Info -->
	<string name="str_player_goal">GOAL(Pen)</string>
	<string name="str_player_assist">ASSIST</string>
	<string name="str_player_name">PALYER</string>
	<string name="str_team_name">TEAM</string>
	
	<!-- Remind -->
	<string name="str_remind_enable">SET REMIND ENABLE</string>
	<string name="str_remind_disable">SET REMIND DISABLE</string>
	<string name="str_remind_fail">FAIL TO SET REMIND</string>
	
	<!-- Alarm String -->
	<string name="str_alram_remind">MATCHES REMIND</string>
	<string name="str_alram_close">CLOSE</string>
	<string name="str_alram_notify">CLICK TO CLOSE.</string>
	
	<!-- Update -->
	<string name="str_update_check_start">CHECK NEW UPDATES&#8230;</string>
	<string name="str_update_check_fail">FAIL TO CHECK THE UPDATES.</string>
	<string name="str_update_check_none">THERE ARE NO UPDATES AVAILABLE.</string>
	<string name="str_update_update_start">START TO DOWNLOAD AND UPDATE.</string>
	<string name="str_update_update_fail_title">UPDATE FAILED!</string>
	<string name="str_update_update_fail_message">PLEASE CHECK THE NETWORK FIRST IF! THEN YOU CAN CHANGE THE UPDATE SERVER IN MEUN!</string>
	<string name="str_update_update_done">DATA UPDATE TO VERSION %1.3f!</string>
	<string name="str_update_apk_title">APP UPDATES AVAILABLE</string>
	<string name="str_update_apk_message">%s\r\n\r\nPLEASE RESET DATE IF THE DATA INCORRECT AFTER INSTALL THE NEW VERSION!</string>
	<string name="str_update_apk_download">UPDATE NOW</string>
	
	<!-- Update server -->
	<string name="str_update_server_title">SELECT UPDATE SERVER</string>
	<string name="str_update_server_1">SERVER A(MASTER)</string>
	<string name="str_update_server_2">SERVER B(SLAVE)</string>
	
	<!-- Reset data -->
	<string name="str_update_data_reset">YOU WILL LOSE ALL DATA. CONTINUE?</string>
	<string name="str_update_data_reset_fail">FAIL TO RESET DATA.</string>
	<string name="str_update_data_reset_success">RESET DATA DONE!PLEASE RESTART APPLICATION IF DATA INCORRECT!</string>
	
	<!-- About -->
	<string name="str_about_close">CLOSE</string>
	<string name="str_about_wechar">Copy the Wechat Account!</string>
	<string name="str_about_app">Supply the matches remind, Group info, Matches Statistic and News!\r\nData version:%1.3f Author:cc</string>
	<string name="str_about_content">Scan Or Click To Add Wechat Contact And Visit The Blog</string>
</resources>
